data/derived/comb/progs/unify/prog4022.ml.out
Characters 78-79:
  else if z = 0 then let n2 = reverse n in z = z+1;;
                                      ^
Error: This expression has type int but an expression was expected of type
         bytes = string
